--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4770,7 +4770,7 @@
 
             <!-- Manga Announcement Box -->
             <div class="relative w-full max-w-2xl p-4 mt-4 bg-black bg-opacity-85 rounded-lg shadow-lg border border-yellow-500 animate-borderMove">
-                <p class="text-white text-xl text-center font-bold">تم إضافة فصل الأسبوع  ({{ mangaCh }})</p>
+                <p class="text-white text-xl text-center font-bold">تم إضافة فصل المانغا  ({{ mangaCh }})</p>
                 <button 
                     v-if="mangas && mangas.length > 0"
                     @click="openMangaModal(mangaCh)"
