--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -13884,10 +13884,27 @@
                         return;
                     }
 
+                    // Initialize the default label and episode number
+                    let episodeNumber = this.selectedEpisode.EpisodeNumber;
+                    let label = "رقم الحلقة:";
+
+                    // Check if the episode number includes "الفيلم"
+                    if (episodeNumber.includes("الفيلم")) {
+                        label = "رقم الفيلم:";
+                        episodeNumber = episodeNumber.replace("الفيلم", "").trim();
+                    } 
+                    // Check if the episode number includes "قصة قصيرة"
+                    else if (episodeNumber.includes("قصة قصيرة")) {
+                        label = "رقم القصة القصيرة:";
+                        episodeNumber = episodeNumber.replace("قصة قصيرة", "").trim();
+                    }
+
                     const token = '7518282241:AAF06PXBA0a0kY2z-Sh7Wm4kj9_kkyRRFk8';
                     const chatId = localStorage.getItem('AreTheUserJoinToTheChannel');
                     console.log(chatId);
-                    const caption = `*رقم الحلقة: ${this.selectedEpisode.EpisodeNumber} (${resolution})*`;
+
+                    // Create the caption with the updated label and episode number
+                    const caption = `*${label} ${episodeNumber} (${resolution})*`;
 
                     // Set the status to 'sending'
                     this.selectedEpisode.EpisodeVideosIDs[index].status = 'sending';
@@ -14096,8 +14113,8 @@
                             <div style="text-align: center; padding: 20px; border: 2px solid #fff; border-radius: 15px; background-color: rgba(0, 0, 0, 0.7); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); animation: slideDown 1s;">
                             <h1 style="font-size: 26px; font-weight: bold; color: #ff4f4f; margin-bottom: 10px;">
                                 لست منضماً إلى القناة.<br>
-                                <span style="font-size: 26px; font-weight: bold; color: #ffffff;">يرجى الانضمام إلى القناة لفتح الدليل، ثم أعد المحاولة</span><br>
-                                <a href="https://t.me/DCRef_Channel" target="_blank" rel="noopener noreferrer" style="color: #00ff00; text-decoration: none; font-size: 20px; font-weight: bold;">اضغط هنا للانتقال إلى القناة</a>
+                                <span style="font-size: 26px; font-weight: bold; color: #ffffff;">يرجى الانضمام إلى القناة لفتح الدليل، ثم أعد المحاولة.</span><br>
+                                <a href="https://t.me/DCRef_Channel" target="_blank" rel="noopener noreferrer" style="color: #00ff00; text-decoration: none; font-size: 22px; font-weight: bold;">اضغط هنا للانتقال إلى القناة</a>
                             </h1>
                             <button id="retryButton" style="padding: 15px 30px; background: linear-gradient(135deg, #007BFF, #0056b3); color: #fff; border: none; border-radius: 5px; cursor: pointer; font-size: 18px; font-weight: bold; margin-top: 20px; transition: transform 0.3s, box-shadow 0.3s;">
                                 أعد المحاولة
