--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -524,7 +524,7 @@
                                 <div v-else class="flex flex-col justify-center gap-4">
                                     <div class="flex items-center px-4">
                                         <div class="w-8 flex justify-start">
-                                            <button v-if="hasNextEpisode" @click="navigateToNextEpisode(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity">
+                                            <button :disabled="!hasNextEpisode" @click="navigateToNextEpisode(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity disabled:opacity-50 disabled:cursor-not-allowed">
                                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
                                             </button>
                                         </div>
@@ -532,7 +532,7 @@
                                             <span class="text-lg font-bold">{{ selectedEpisode.EpisodeNumber }}</span>
                                         </div>
                                         <div class="w-8 flex justify-end">
-                                            <button v-if="hasPreviousEpisode" @click="navigateToPreviousEpisode(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity">
+                                            <button :disabled="!hasPreviousEpisode" @click="navigateToPreviousEpisode(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity disabled:opacity-50 disabled:cursor-not-allowed">
                                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
                                             </button>
                                         </div>
@@ -596,7 +596,7 @@
                                 <div v-else class="flex flex-col justify-center gap-4">
                                     <div class="flex items-center px-4">
                                         <div class="w-8 flex justify-start">
-                                            <button v-if="hasNextMovie" @click="navigateToNextMovie(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity">
+                                            <button :disabled="!hasNextMovie" @click="navigateToNextMovie(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity disabled:opacity-50 disabled:cursor-not-allowed">
                                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
                                             </button>
                                         </div>
@@ -604,7 +604,7 @@
                                             <span class="text-lg font-bold">{{ selectedEpisode.EpisodeNumber }}</span>
                                         </div>
                                         <div class="w-8 flex justify-end">
-                                            <button v-if="hasPreviousMovie" @click="navigateToPreviousMovie(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity">
+                                            <button :disabled="!hasPreviousMovie" @click="navigateToPreviousMovie(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity disabled:opacity-50 disabled:cursor-not-allowed">
                                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
                                             </button>
                                         </div>
@@ -668,7 +668,7 @@
                                 <div v-else class="flex flex-col justify-center gap-4">
                                     <div class="flex items-center px-4">
                                         <div class="w-8 flex justify-start">
-                                            <button v-if="hasNextManga" @click="navigateToNextManga(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity">
+                                            <button :disabled="!hasNextManga" @click="navigateToNextManga(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity disabled:opacity-50 disabled:cursor-not-allowed">
                                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
                                             </button>
                                         </div>
@@ -676,7 +676,7 @@
                                             <span class="text-lg font-bold">{{ selectedManga.MangaNumber }}</span>
                                         </div>
                                         <div class="w-8 flex justify-end">
-                                            <button v-if="hasPreviousManga" @click="navigateToPreviousManga(); resetStatusForEpisodeManga();resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity">
+                                            <button :disabled="!hasPreviousManga" @click="navigateToPreviousManga(); resetStatusForEpisodeManga();resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity disabled:opacity-50 disabled:cursor-not-allowed">
                                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
                                             </button>
                                         </div>
@@ -5312,18 +5312,18 @@
                                 <div class="flex space-x-2">
                                     <!-- Next Episode Button -->
                                     <button 
-                                        v-if="selectedEpisode.EpisodeParts && nextEpisodeExists" 
+                                        :disabled="!selectedEpisode.EpisodeParts || !nextEpisodeExists" 
                                         @click="fetchNextEpisode" 
-                                        class="focus:outline-none ml-12"
+                                        class="focus:outline-none ml-12 disabled:opacity-50 disabled:cursor-not-allowed"
                                     >
                                         <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
                                     </button>
                                     
                                     <!-- Previous Episode Button -->
                                     <button 
-                                        v-if="selectedEpisode.EpisodeParts && previousEpisodeExists" 
+                                        :disabled="!selectedEpisode.EpisodeParts || !previousEpisodeExists" 
                                         @click="fetchPreviousEpisode" 
-                                        class="focus:outline-none"
+                                        class="focus:outline-none disabled:opacity-50 disabled:cursor-not-allowed"
                                     >
                                         <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
                                     </button>
