--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -779,7 +779,10 @@
                                 <div v-else class="flex flex-col justify-center gap-4">
                                     <div class="flex items-center px-4">
                                         <div class="w-8 flex justify-start">
-                                            <button :disabled="!hasNextEpisode || selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" @click="navigateToNextEpisode(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
+                                            <button v-if="showNextGroupButton" :disabled="selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" @click="navigateToNextEpisodeGroup(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
+                                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next-tb.png" alt="التالي" class="h-8 w-8" />
+                                            </button>
+                                            <button v-if="!showNextGroupButton" :disabled="!hasNextEpisode || selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" @click="navigateToNextEpisode(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
                                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
                                             </button>
                                         </div>
@@ -787,7 +790,10 @@
                                             <span class="text-lg font-bold">{{ selectedEpisode.EpisodeNumber }}</span>
                                         </div>
                                         <div class="w-8 flex justify-end">
-                                            <button :disabled="!hasPreviousEpisode || selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" @click="navigateToPreviousEpisode(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
+                                            <button v-if="showPreviousGroupButton" :disabled="selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" @click="navigateToPreviousEpisodeGroup(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
+                                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous-tb.png" alt="السابق" class="h-8 w-8" />
+                                            </button>
+                                            <button v-if="!showPreviousGroupButton" :disabled="!hasPreviousEpisode || selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" @click="navigateToPreviousEpisode(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
                                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
                                             </button>
                                         </div>
@@ -6849,6 +6855,46 @@
                     const currentGroup = this.groupedEpisodes[this.activeTab.episodes].items;
                     const currentIndex = currentGroup.findIndex(ep => ep.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
                     return currentIndex !== -1 && currentIndex > 0;
+                },
+
+                isLastEpisodeInGroup() {
+                    if (!this.selectedEpisode || !this.groupedEpisodes[this.activeTab.episodes]) {
+                        return false;
+                    }
+                    const currentGroup = this.groupedEpisodes[this.activeTab.episodes].items;
+                    const currentIndex = currentGroup.findIndex(ep => ep.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
+                    return currentIndex !== -1 && currentIndex === currentGroup.length - 1;
+                },
+
+                isFirstEpisodeInGroup() {
+                    if (!this.selectedEpisode || !this.groupedEpisodes[this.activeTab.episodes]) {
+                        return false;
+                    }
+                    const currentGroup = this.groupedEpisodes[this.activeTab.episodes].items;
+                    const currentIndex = currentGroup.findIndex(ep => ep.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
+                    return currentIndex !== -1 && currentIndex === 0;
+                },
+
+                hasNextEpisodeGroup() {
+                    if (!this.groupedEpisodes || this.groupedEpisodes.length === 0) {
+                        return false;
+                    }
+                    return this.activeTab.episodes < this.groupedEpisodes.length - 1;
+                },
+
+                hasPreviousEpisodeGroup() {
+                    if (!this.groupedEpisodes || this.groupedEpisodes.length === 0) {
+                        return false;
+                    }
+                    return this.activeTab.episodes > 0;
+                },
+
+                showNextGroupButton() {
+                    return this.isLastEpisodeInGroup && this.hasNextEpisodeGroup;
+                },
+
+                showPreviousGroupButton() {
+                    return this.isFirstEpisodeInGroup && this.hasPreviousEpisodeGroup;
                 },
 
                 hasNextMovie() {
@@ -15980,6 +16026,24 @@
                     const currentIndex = currentGroup.findIndex(ep => ep.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
                     if (currentIndex !== -1 && currentIndex > 0) {
                         this.selectedEpisode = currentGroup[currentIndex - 1];
+                    }
+                },
+
+                navigateToNextEpisodeGroup() {
+                    if (!this.hasNextEpisodeGroup) return;
+                    this.activeTab.episodes += 1;
+                    const nextGroup = this.groupedEpisodes[this.activeTab.episodes];
+                    if (nextGroup && nextGroup.items.length > 0) {
+                        this.selectedEpisode = nextGroup.items[0];
+                    }
+                },
+
+                navigateToPreviousEpisodeGroup() {
+                    if (!this.hasPreviousEpisodeGroup) return;
+                    this.activeTab.episodes -= 1;
+                    const previousGroup = this.groupedEpisodes[this.activeTab.episodes];
+                    if (previousGroup && previousGroup.items.length > 0) {
+                        this.selectedEpisode = previousGroup.items[previousGroup.items.length - 1];
                     }
                 },
 
