--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -832,13 +832,13 @@
                     <div v-if="selectedCategory === 'movies'" class="overflow-y-auto p-4 flex-1 always-visible-scrollbar">
                         <div v-if="groupedMovies.length" class="mb-4">
                             <div class="flex flex-wrap gap-2 mb-4 justify-center" dir="ltr">
-                                <button 
+                                <button
                                 v-for="(group, index) in groupedMovies" 
                                 :disabled="selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')"
                                 @click="handleMovieGroupChange(index)" 
                                 :class="['px-3 py-1 rounded disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90', activeTab.movies === index ? 'bg-blue-500 text-white' : 'bg-gray-700']">
                                 {{ group.range }}
-                            </button>                            
+                            </button>
                             </div>
                             <fieldset class="border p-2 rounded">
                                 <legend class="flex items-center gap-2">
@@ -859,7 +859,10 @@
                                 <div v-else class="flex flex-col justify-center gap-4">
                                     <div class="flex items-center px-4">
                                         <div class="w-8 flex justify-start">
-                                            <button :disabled="!hasNextMovie || selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" @click="navigateToNextMovie(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
+                                            <button v-if="showNextMovieGroupButton" :disabled="selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" @click="navigateToNextMovieGroup(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
+                                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next-tb.png" alt="التالي" class="h-8 w-8" />
+                                            </button>
+                                            <button v-if="!showNextMovieGroupButton" :disabled="!hasNextMovie || selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" @click="navigateToNextMovie(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
                                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
                                             </button>
                                         </div>
@@ -867,7 +870,10 @@
                                             <span class="text-lg font-bold">{{ selectedEpisode.EpisodeNumber.replace('الفيلم ', '') }}</span>
                                         </div>
                                         <div class="w-8 flex justify-end">
-                                            <button :disabled="!hasPreviousMovie || selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" @click="navigateToPreviousMovie(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
+                                            <button v-if="showPreviousMovieGroupButton" :disabled="selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" @click="navigateToPreviousMovieGroup(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
+                                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous-tb.png" alt="السابق" class="h-8 w-8" />
+                                            </button>
+                                            <button v-if="!showPreviousMovieGroupButton" :disabled="!hasPreviousMovie || selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" @click="navigateToPreviousMovie(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
                                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
                                             </button>
                                         </div>
@@ -6913,6 +6919,46 @@
                     const currentGroup = this.groupedMovies[this.activeTab.movies].items;
                     const currentIndex = currentGroup.findIndex(movie => movie.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
                     return currentIndex !== -1 && currentIndex > 0;
+                },
+
+                isLastMovieInGroup() {
+                    if (!this.selectedEpisode || !this.groupedMovies[this.activeTab.movies]) {
+                        return false;
+                    }
+                    const currentGroup = this.groupedMovies[this.activeTab.movies].items;
+                    const currentIndex = currentGroup.findIndex(movie => movie.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
+                    return currentIndex !== -1 && currentIndex === currentGroup.length - 1;
+                },
+
+                isFirstMovieInGroup() {
+                    if (!this.selectedEpisode || !this.groupedMovies[this.activeTab.movies]) {
+                        return false;
+                    }
+                    const currentGroup = this.groupedMovies[this.activeTab.movies].items;
+                    const currentIndex = currentGroup.findIndex(movie => movie.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
+                    return currentIndex !== -1 && currentIndex === 0;
+                },
+
+                hasNextMovieGroup() {
+                    if (!this.groupedMovies || this.groupedMovies.length === 0) {
+                        return false;
+                    }
+                    return this.activeTab.movies < this.groupedMovies.length - 1;
+                },
+
+                hasPreviousMovieGroup() {
+                    if (!this.groupedMovies || this.groupedMovies.length === 0) {
+                        return false;
+                    }
+                    return this.activeTab.movies > 0;
+                },
+
+                showNextMovieGroupButton() {
+                    return this.isLastMovieInGroup && this.hasNextMovieGroup;
+                },
+
+                showPreviousMovieGroupButton() {
+                    return this.isFirstMovieInGroup && this.hasPreviousMovieGroup;
                 },
 
                 hasNextManga() {
@@ -16062,6 +16108,24 @@
                     const currentIndex = currentGroup.findIndex(movie => movie.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
                     if (currentIndex !== -1 && currentIndex > 0) {
                         this.selectedEpisode = currentGroup[currentIndex - 1];
+                    }
+                },
+
+                navigateToNextMovieGroup() {
+                    if (!this.hasNextMovieGroup) return;
+                    this.activeTab.movies += 1;
+                    const nextGroup = this.groupedMovies[this.activeTab.movies];
+                    if (nextGroup && nextGroup.items.length > 0) {
+                        this.selectedEpisode = nextGroup.items[0];
+                    }
+                },
+
+                navigateToPreviousMovieGroup() {
+                    if (!this.hasPreviousMovieGroup) return;
+                    this.activeTab.movies -= 1;
+                    const previousGroup = this.groupedMovies[this.activeTab.movies];
+                    if (previousGroup && previousGroup.items.length > 0) {
+                        this.selectedEpisode = previousGroup.items[previousGroup.items.length - 1];
                     }
                 },
 
